--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,600,700,800,900&display=swap" rel="stylesheet">
-    <title>Your bot name</title>
+    <title>TIXO GW</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-transparent">
@@ -26,9 +26,6 @@
                 <a class="nav-link" href="#">Features</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="#">Subscription</a>
             </li>
         </ul>
@@ -38,7 +35,6 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Commands</a>
-                <a class="dropdown-item" href="#">Tutorials</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Server settings</a>
             </div>
@@ -51,7 +47,7 @@
 </nav>
 <div class="heading">
     <h1 class="display-5 title">It's time to use Bot in your server.</h1>
-    <p class="subtitle">Bot is a multi-purpose bot ready to skill up and boost up your Discord server<br />Also features auto-moderation, administration, music and much more!</p>
+    <p class="subtitle">Our Bot is a good Giveaway Bot 24/7 Online<br />Also features autosave that means if the bot crashes [ That never happens ] then he will save your giveaway!</p>
     <a class="btn btn-primary btn-lg" href="#start_link" target="_blank" role="button">Get started</a>
     <a class="btn btn-secondary btn-lg" href="#server_link" target="_blank" role="button">Add to server</a>
     <br /><br /><br /><br /><br /><br />
@@ -63,19 +59,19 @@
         <div class="card" style="width: 18rem;">
         <div class="card-body">
             <h5 class="card-title">Feature #1</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+            <p class="card-text">Easy to use !start system and !help system.</p>
         </div>
     </div>
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Feature #2</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+                <p class="card-text">Reroll your Giveaways you only need the Prize of the Giveaway you want to reroll.</p>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title">Feature #3</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+                <p class="card-text">You can End your Giveaway when ever you want.</p>
             </div>
         </div>
     </div>
@@ -107,7 +103,7 @@
         <div class="card">
             <div class="card-body gs-card">
                 <div class="title">Ready to try Bot?</div>
-                <div class="subtitle">Invite Bot and start giving your server cool perks!</div>
+                <div class="subtitle">Invite Bot and start nice Giveaways
                 <br />
                 <a class="btn btn-primary btn-lg" href="#start_link" role="button">Get started</a>
             </div><br />
@@ -116,9 +112,9 @@
     <div class="footer">
         <div class="bot-footer">
             <img src="assets/BotLogoWord.svg" width="150"><br />
-            Copyright © [BotOwner] - 2020
+            Copyright © Tixo - 2024
         </div><br/>
-        <div class="nouridio">website designed by <a href="https://nouridio.com"> nouridio</a></div>
+        <div class="nouridio">website designed by <a href="doppeldrobs"> nouridio</a></div>
     </di
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
